; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/intel/extr_vmcs.c_vmcs_set_msr_save.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/intel/extr_vmcs.c_vmcs_set_msr_save.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmcs = type { i32 }

@VMCS_EXIT_MSR_STORE = common dso_local global i32 0, align 4
@VMCS_EXIT_MSR_STORE_COUNT = common dso_local global i32 0, align 4
@VMCS_ENTRY_MSR_LOAD = common dso_local global i32 0, align 4
@VMCS_ENTRY_MSR_LOAD_COUNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmcs_set_msr_save(%struct.vmcs* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.vmcs*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.vmcs* %0, %struct.vmcs** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.vmcs*, %struct.vmcs** %4, align 8
  %9 = call i32 @VMPTRLD(%struct.vmcs* %8)
  %10 = load i32, i32* @VMCS_EXIT_MSR_STORE, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @vmwrite(i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  br label %34

15:                                               ; preds = %3
  %16 = load i32, i32* @VMCS_EXIT_MSR_STORE_COUNT, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @vmwrite(i32 %16, i32 %17)
  store i32 %18, i32* %7, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %34

21:                                               ; preds = %15
  %22 = load i32, i32* @VMCS_ENTRY_MSR_LOAD, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @vmwrite(i32 %22, i32 %23)
  store i32 %24, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  br label %34

27:                                               ; preds = %21
  %28 = load i32, i32* @VMCS_ENTRY_MSR_LOAD_COUNT, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @vmwrite(i32 %28, i32 %29)
  store i32 %30, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %27
  br label %34

33:                                               ; preds = %27
  store i32 0, i32* %7, align 4
  br label %34

34:                                               ; preds = %33, %32, %26, %20, %14
  %35 = load %struct.vmcs*, %struct.vmcs** %4, align 8
  %36 = call i32 @VMCLEAR(%struct.vmcs* %35)
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @VMPTRLD(%struct.vmcs*) #1

declare dso_local i32 @vmwrite(i32, i32) #1

declare dso_local i32 @VMCLEAR(%struct.vmcs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
